# Taibaigei-Li

./: .gitignore  AGENTS.md  CONTRIBUTING.md  PUBLIC_RELEASE_MANIFEST.md  README.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: runtime-state-migration.md
mybot/: .env.example  .gitignore  README.md  __init__.py  bot.py  main.py  pyproject.toml
mybot/common/: __init__.py  admin.py  ai_client.py  charm.py  command_registry.py  config.py  feature_flags.py  festival_calendar.py  festival_greetings.py  help_registry.py  interaction_stats.py  json_store.py  logger.py  message_utils.py  monthly_fame.py  streak.py  titles.py  user_utils.py
mybot/plugins/: __init__.py  admin_console.py  ai_cache.py  ai_chat.py  backup.py  blacklist.py  daily_greet.py  fortune.py  fun.py  game_disabled.py  gift.py  hello.py  help.py  love.py  monthly_fame.py  poem.py  poetry_game.py  points.py  premium_chat.py  quotes.py  rate_limit.py  riddle.py  roast_target.py  youyimiya.py
mybot/plugins_disabled/: __init__.py  blackjack.py  dice.py  race.py  roulette.py  slot.py
mybot/tests/: test_fortune_scoring.py  test_gift_inventory.py  test_hidden_slot_title.py  test_legacy_game_schedule.py  test_plugin_loading.py  test_quotes_search.py  test_version.py
tools/: deploy_server.sh  export_public_release.py
