[project]
name = "mybot"
version = "0.1.5"
description = "李太白给 OneBot 群聊机器人"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot2>=2.4.4",
    "uvicorn[standard]>=0.40.0",
    "websockets>=16.0",
    "nonebot-plugin-apscheduler>=0.5.0",
    "python-dotenv>=1.1.1",
    "zhdate"
]

[project.scripts]
li-taibaigei = "mybot.bot:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mybot", "mybot.common", "mybot.plugins", "mybot.plugins_disabled"]
package-dir = {mybot = "."}

[tool.nonebot]
plugins = ["nonebot_plugin_apscheduler"]
